Resolved overflow styling issues on groomers page, finished adding in groomer bios.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2146,7 +2146,7 @@ input, select, textarea {
 			}
 
 		.bio {
-			overflow: auto;
+			overflow: hidden;
 			word-wrap: break-word;
 		}
 
